tests/diagnostics/index_non_array.kal
# Indexing something that is not an array.
fn f(n: i64) -> i64 = n[0];
